kubernetes/kustomize/nostr-frontend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nostr-frontend
  labels:
    app: nostr-frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: nostr-frontend
