kubernetes/kustomize/nostr-frontend/base/ingress.yaml
# Ingress Kubernetes File
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nostr-frontend
  labels:
    app: nostr-frontend
spec:
  rules:
    - host: ui.nostr.0x50.tech # CHANGE ME!
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nostr-frontend
                port:
                  number: 80
